--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     function resetPage() {
       document.body.style.animation = 'gradientAnimation 10s ease infinite';
       document.querySelector('.celebrate-btn').disabled = false;
-      document.querySelector('.celebrate-btn').innerText = "Click to Celebrate, Anshu!";
+      document.querySelector('.celebrate-btn').innerText = "Jara dekhke, Color pakka hai!";
     }
 
     // Create confetti effect
