--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
   <div class="popup" id="popup">
     <h2>Holi Wishes for You, My❤️!</h2>
     <p>May your life be filled with the brightest colors of joy and happiness🧿</p>
-    <button onclick="closePopup()">Close</button>
+    <button onclick="closePopup()">Love you</button>
   </div>
 
   <script>
